--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hello Electron React!</title>
+    <title>MM Dashboard</title>
     <script>
       (() => {
         if (process?.env?.NODE_ENV !== 'development') {
